--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  line-height: 27px;
+  background-color: lightblue;
+
+}
+
+header{
+  font-size: 50px;
+  text-align: center;
+  color: white;
+}
