rid of component

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -1,2 +1,6 @@
-<header></header>
-<search></search>
+<!-- <header></header> -->
+<!-- <search></search> -->
+<h1>A New Twitter</h1>
+
+<input type = "text"  #txt>
+<button (click) = "getTextBoxVal(txt)">Search</button>
